--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <hr>
     <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
+    <a href="gallery.html">Gallery</a>
     <hr>
     
     <table cellspacing = 15>
