Gallery.html updated

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <table cellspacing=5>
             <tr>
                 <td><label for="fName">First Name</label></td>
-                <td><input type="text" pattern="[a-z]{2, 10}" name="fName"id="fName" required></td>
+                <td><input type="text" pattern="[A-Z]{1}[a-z]" name="fName"id="fName" required></td>
             </tr>
             <tr>
                 <td><label for="sName">Second Name</label></td>
