--- a/gallery.html
+++ b/gallery.html
@@ -30,19 +30,37 @@
 
     <table>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+                <figure><img src="https://images.pexels.com/photos/210186/pexels-photo-210186.jpeg?cs=srgb&dl=time-lapse-photography-of-waterfalls-during-sunset-210186.jpg&fm=jpg" alt="" width="15%"></figure>
+            </td>
+            <td>
+                <figure><img src="https://images.pexels.com/photos/3834347/pexels-photo-3834347.jpeg?crop=entropy&cs=srgb&dl=city-skyline-during-night-time-3834347.jpg&fit=crop&fm=jpg&h=3648&w=5472" alt="" width="15%"></figure>
+            </td>
+            <td>
+                <figure><img src="https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?crop=entropy&cs=srgb&dl=gray-bridge-and-trees-814499.jpg&fit=crop&fm=jpg&h=600&w=600" alt="" width="15%"></figure>
+            </td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+                <figure><img src="https://images.pexels.com/photos/161154/stained-glass-spiral-circle-pattern-161154.jpeg?crop=entropy&cs=srgb&dl=worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg&fit=crop&fm=jpg&h=2000&w=3008" alt="" width="15%"></figure>
+            </td>
+            <td>
+                <figure><img src="https://images.pexels.com/photos/1525612/pexels-photo-1525612.jpeg?crop=entropy&cs=srgb&dl=vehicles-on-road-between-high-rise-buildings-1525612.jpg&fit=crop&fm=jpg&h=3458&w=3221" alt="" width="15%"></figure>
+            </td>
+            <td>
+                <figure><img src="" alt=""></figure>
+            </td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+                <figure><img src="" alt=""></figure>
+            </td>
+            <td>
+                <figure><img src="" alt=""></figure>
+            </td>
+            <td>
+                <figure><img src="" alt=""></figure>
+            </td>
         </tr>
     </table>
 
