Updated profile picture

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <table cellspacing = 15>
         <tr>
             <td> 
-                <img src="/asset/img/k24.jpg" alt="Image of kobe winning the oscar" width="60%">
+                <img src="/asset/img/profile/eagle.png" alt="Image of an eagle soaring through the sky" width="60%">
             </td>
             <td>
                 <h1>Natnael Mekonnen</h1>
