--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     <table cellspacing = 15>
         <tr>
             <td> 
-                <img src="/asset/img/k24.jpg" alt="Image of kobe winning the oscar" width="60%">
+                <img src="/asset/img/profile/eagle.png" alt="Image of an eagle soaring through the sky" width="60%">
             </td>
             <td>
                 <h1>Natnael Mekonnen</h1>
@@ -28,38 +28,47 @@
     </table>
     <hr>
 
+    <h1>Image Gallery</h1>
+    <br>
+
     <table>
+        <th>Nature</th>
+        <th>Skyscrapers</th>
+        <th>Art</th>
+        <!-- Row 1 -->
         <tr>
             <td>
-                <figure><img src="https://images.pexels.com/photos/210186/pexels-photo-210186.jpeg?cs=srgb&dl=time-lapse-photography-of-waterfalls-during-sunset-210186.jpg&fm=jpg" alt="" width="15%"></figure>
+                <figure><img src="asset/img/nature/gray-bridge-and-trees-814499.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="https://images.pexels.com/photos/3834347/pexels-photo-3834347.jpeg?crop=entropy&cs=srgb&dl=city-skyline-during-night-time-3834347.jpg&fit=crop&fm=jpg&h=3648&w=5472" alt="" width="15%"></figure>
+                <figure><img src="asset/img/skyscrapers/architecture-black-and-white-building-business-273209.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?crop=entropy&cs=srgb&dl=gray-bridge-and-trees-814499.jpg&fit=crop&fm=jpg&h=600&w=600" alt="" width="15%"></figure>
+                <figure><img src="asset/img/art/brown-wooden-planks-889839.jpg" alt="" width="30%"></figure>
             </td>
         </tr>
+        <!-- Row 2 -->
         <tr>
             <td>
-                <figure><img src="https://images.pexels.com/photos/161154/stained-glass-spiral-circle-pattern-161154.jpeg?crop=entropy&cs=srgb&dl=worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg&fit=crop&fm=jpg&h=2000&w=3008" alt="" width="15%"></figure>
+                <figure><img src="asset/img/nature/scenic-view-of-mountain-1666021.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="https://images.pexels.com/photos/1525612/pexels-photo-1525612.jpeg?crop=entropy&cs=srgb&dl=vehicles-on-road-between-high-rise-buildings-1525612.jpg&fit=crop&fm=jpg&h=3458&w=3221" alt="" width="15%"></figure>
+                <figure><img src="asset/img/skyscrapers/city-skyline-during-night-time-3834347.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="" alt=""></figure>
+                <figure><img src="asset/img/art/multicolored-abstract-painting-1012982.jpg" alt="" width="30%"></figure>
             </td>
         </tr>
+        <!-- Row 3 -->
         <tr>
             <td>
-                <figure><img src="" alt=""></figure>
+                <figure><img src="asset/img/nature/tree-with-brunch-and-green-leaves-during-sunset-70365.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="" alt=""></figure>
+                <figure><img src="asset/img/skyscrapers/vehicles-on-road-between-high-rise-buildings-1525612.jpg" alt="" width="30%"></figure>
             </td>
             <td>
-                <figure><img src="" alt=""></figure>
+                <figure><img src="asset/img/art/worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg" alt="" width="30%"></figure>
             </td>
         </tr>
     </table>
