--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/asset/img/k24.jpg">
+    <link rel="icon" href="/asset/img/profile/eagle.png">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
     <!-- Head -->
     <hr>
     <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
     <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact</a>
     <hr>
     
     <table cellspacing = 15>
         <tr>
-            <td> 
-                <img src="/asset/img/profile/eagle.png" alt="Image of an eagle soaring through the sky" width="60%">
+            <td width="30%"> 
+                <img src="/asset/img/profile/eagle.png" alt="Image of an eagle soaring through the sky" width="95%">
             </td>
             <td>
                 <h1>Natnael Mekonnen</h1>
@@ -81,5 +81,10 @@
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
     </table>
+
+    <hr>
+    <p align="center">Developed by Natnael &copy;, 2020</p>
+    <hr>
+
 </body>
 </html>
