Final review done

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/asset/img/profile/eagle.png">
+    <link rel="icon" href="/asset/img/icon/icon.gif">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
                 <figure>
                     <img src="https://images.pexels.com/photos/889839/pexels-photo-889839.jpeg?crop=entropy&cs=srgb&dl=brown-wooden-planks-889839.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Art on wooden planks" width="100%" height="100%">
                     <hr>
-                    <figcaption>Art on Wooden Planks</figcaption>
+                    <figcaption>Tears - Art on Wooden Planks</figcaption>
                 </figure>
             </td>
         </tr>
@@ -87,7 +87,7 @@
         <tr>
             <td width="30%">
                 <figure>
-                    <img src="https://images.pexels.com/photos/70365/forest-sunbeams-trees-sunlight-70365.jpeg?crop=entropy&cs=srgb&dl=tree-with-brunch-and-green-leaves-during-sunset-70365.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Sunlight Radiating Through Green Leaves" width="100%" height="100%">
+                    <img src="https://images.pexels.com/photos/70365/forest-sunbeams-trees-sunlight-70365.jpeg?crop=entropy&cs=srgb&dl=tree-with-brunch-and-green-leaves-during-sunset-70365.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Green leaves during sunset" width="100%" height="100%">
                     <hr>
                     <figcaption>Sunlight Radiating Through Green Leaves</figcaption>
                 </figure>
@@ -96,12 +96,12 @@
                 <figure>
                     <img src="https://images.pexels.com/photos/1525612/pexels-photo-1525612.jpeg?crop=entropy&cs=srgb&dl=vehicles-on-road-between-high-rise-buildings-1525612.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Vehicles On Road between High Rise Buildings" width="100%" height="100%">
                     <hr>
-                    <figcaption>Vehicles On Road between High Rise Buildings</figcaption>
+                    <figcaption>Life in Metroplitan City</figcaption>
                 </figure>
             </td>
             <td width="30%">
                 <figure>
-                    <img src="https://images.pexels.com/photos/161154/stained-glass-spiral-circle-pattern-161154.jpeg?crop=entropy&cs=srgb&dl=worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Worms Eye View of Spiral Stained Glass" width="100%" height="100%">
+                    <img src="https://images.pexels.com/photos/161154/stained-glass-spiral-circle-pattern-161154.jpeg?crop=entropy&cs=srgb&dl=worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Spiral Stained Glass" width="100%" height="100%">
                     <hr>
                     <figcaption>Worms Eye View of Spiral Stained Glass</figcaption>
                 </figure>
