--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/asset/img/profile/eagle.png">
+    <link rel="icon" href="/asset/img/icon/icon.gif">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
