Updated profile picture format from png to gif

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <table cellspacing = 15>
         <tr>
             <td width="30%"> 
-                <img src="/asset/img/profile/eagle.png" alt="Image of an eagle soaring through the sky" width="95%">
+                <img src="/asset/img/profile/eagle.gif" alt="Image of an eagle soaring through the sky" width="95%">
             </td>
             <td>
                 <h1>Natnael Mekonnen</h1>
