--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/asset/img/icon/icon.gif">
+    <link rel="icon" href="asset/img/icon/icon.gif">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <table cellspacing = 15>
         <tr>
             <td width="30%"> 
-                <img src="/asset/img/profile/eagle.gif" alt="Image of an eagle soaring through the sky" width="95%">
+                <img src="asset/img/profile/eagle.gif" alt="Image of an eagle soaring through the sky" width="95%">
             </td>
             <td>
                 <h1>Natnael Mekonnen</h1>
