gallery2 added with stylesheet

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://nati-m-afw.github.io/MyCV/asset/img/icon/icon.gif">
     <title>Natnael Mekonnen</title>
+    <style>
+        /* body{
+            background-image: url("/asset/img/profile/eagle.gif") ;
+            background-repeat: no-repeat;
+            background-size: cover;
+        } */
+    </style>
 </head>
 <body>
     <!-- Head -->
