updated index.html body from table to css; updated contact.html form to css based

--- a/gallery.html
+++ b/gallery.html
@@ -112,9 +112,10 @@
     </table>
     <br>
 
-    <hr>
-    <p align="center">Developed by Natnael &copy;, 2020</p>
-    <hr>
+    <!-- Footer -->
+    <footer>
+    Developed by Natnael &copy;, 2020
+    </footer>
 
 
 </div>
