--- a/index.html
+++ b/index.html
@@ -51,42 +51,38 @@
             </ul>
         </li>
     </ul>
-    <hr>
+    </section>
+
 
     <!-- XP -->
+    <section>
     <h3>Work Experience</h3>
-    <table cellpadding=15>
-        <th>Date</th>
-        <th>Job Title</th>
-        <tr>
-            <td>19/12/01 - 19/01/01</td>
-            <td>Web Design Consultant</td>
-        </tr>
-        <tr>
-            <td>18/12/01 - 18/01/01</td>
-            <td>Junior Web Developer</td>
-        </tr>
-    </table>
-    <hr>
+    <div class="grid">
+        <div class="th">Date</div>
+        <div class="th">Job Title</div>
+            <div>19/12/01 - 19/01/01</div>
+            <div>Web Design Consultant</div>
+            <div>18/12/01 - 18/01/01</div>
+            <div>Junior Web Developer</div>
+    </div>
+    </section>
 
     <!-- Skills -->
+    <section>
     <h3>Top Skills</h3>
-    <!-- Table -->
-    <table cellspacing = "15">
-        <tr>
-            <td>Java Web Developement</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>    
-            <td>PHP Web Developement</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-    </table>
-
-    <hr>
-    <p align="center">Developed by Natnael &copy;, 2020</p>
-    <hr>
+    <div class="grid">
+        <div>Java Web Developement</div>
+        <div>⭐⭐⭐⭐⭐</div>
+        <div>PHP Web Developement</div>
+        <div>⭐⭐⭐⭐⭐</div>
+    </div>
     </section>
+    
+
+    <!-- Footer -->
+    <footer>
+    Developed by Natnael &copy;, 2020
+    </footer>
 
     </div>
 
