flexbox added to contact form

--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://nati-m-afw.github.io/MyCV/asset/img/icon/icon.gif">
     <link rel="stylesheet" href="asset/css/base_style.css">
+    <link rel="stylesheet" href="asset/css/gallery_style_float.css">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
@@ -30,87 +31,51 @@
 
     <!-- Gallery -->
 
-    <h3>Image Gallery</h3>
+    <h3 id="title">natnael mekonnen / gallery</h3>
     <br>
 
-    <table>
-        <th>Nature</th>
-        <th>Skyscrapers</th>
-        <th>Art</th>
-        <!-- Row 1 -->
-        <tr>
-            <td width="30%">
-                <figure>
-                    <img src="https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?crop=entropy&cs=srgb&dl=gray-bridge-and-trees-814499.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Gray Bridge in the forest" width="100%" height="100%">
-                    <hr>
-                    <figcaption>Gray Brige in the Forest</figcaption>
-                </figure>
-            </td>
-            <td width="30%">
-                <figure>
-                    <img src="https://images.pexels.com/photos/273209/pexels-photo-273209.jpeg?crop=entropy&cs=srgb&dl=architecture-black-and-white-building-business-273209.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Business Building" width="100%" height="100%">
-                    <hr>
-                    <figcaption>A Futuristic Skyscraper</figcaption>
-                </figure>
-            </td>
-            <td width="30%">
+    <section>
+        <div class="th">Nature</div>
+        <div class="th">Skyscrapers</div>
+        <div class="th">Art</div>
+       
+            <figure>
+                <img src="https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?crop=entropy&cs=srgb&dl=gray-bridge-and-trees-814499.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Gray Bridge in the forest" width="100%" height="100%">
+                <figcaption>Gray Brige in the Forest</figcaption>
+            </figure>
+            <figure>
+                <img src="https://images.pexels.com/photos/273209/pexels-photo-273209.jpeg?crop=entropy&cs=srgb&dl=architecture-black-and-white-building-business-273209.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Business Building" width="100%" height="100%">
+                <figcaption>A Futuristic Skyscraper</figcaption>
+            </figure>
                 <figure>
                     <img src="https://images.pexels.com/photos/889839/pexels-photo-889839.jpeg?crop=entropy&cs=srgb&dl=brown-wooden-planks-889839.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Art on wooden planks" width="100%" height="100%">
-                    <hr>
                     <figcaption>Tears - Art on Wooden Planks</figcaption>
                 </figure>
-            </td>
-        </tr>
-        <!-- Row 2 -->
-        <tr>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/1666021/pexels-photo-1666021.jpeg?crop=entropy&cs=srgb&dl=scenic-view-of-mountain-1666021.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Mountain View" width="100%" height="100%">
-                    <hr>
                     <figcaption>A View of a Mountain from the Forest</figcaption>
                 </figure>
-            </td>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/3834347/pexels-photo-3834347.jpeg?crop=entropy&cs=srgb&dl=city-skyline-during-night-time-3834347.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Skyscraper during night time" width="100%" height="100%">
-                    <hr>
                     <figcaption>City Skyline During Night Time</figcaption>
                 </figure>
-            </td>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/1012982/pexels-photo-1012982.jpeg?crop=entropy&cs=srgb&dl=multicolored-abstract-painting-1012982.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Multicolored abstract painting" width="100%" height="100%">
-                    <hr>
                     <figcaption>Multicolored Abstract Painting</figcaption>
                 </figure>
-            </td>
-        </tr>
-        <!-- Row 3 -->
-        <tr>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/70365/forest-sunbeams-trees-sunlight-70365.jpeg?crop=entropy&cs=srgb&dl=tree-with-brunch-and-green-leaves-during-sunset-70365.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Green leaves during sunset" width="100%" height="100%">
-                    <hr>
                     <figcaption>Sunlight Radiating Through Green Leaves</figcaption>
                 </figure>
-            </td>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/1525612/pexels-photo-1525612.jpeg?crop=entropy&cs=srgb&dl=vehicles-on-road-between-high-rise-buildings-1525612.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Vehicles On Road between High Rise Buildings" width="100%" height="100%">
-                    <hr>
                     <figcaption>Life in Metroplitan City</figcaption>
                 </figure>
-            </td>
-            <td width="30%">
                 <figure>
                     <img src="https://images.pexels.com/photos/161154/stained-glass-spiral-circle-pattern-161154.jpeg?crop=entropy&cs=srgb&dl=worms-eye-view-of-spiral-stained-glass-decors-through-the-161154.jpg&fit=crop&fm=jpg&h=600&w=600" alt="Spiral Stained Glass" width="100%" height="100%">
-                    <hr>
                     <figcaption>Worms Eye View of Spiral Stained Glass</figcaption>
                 </figure>
-            </td>
-        </tr>
-    </table>
-    <br>
+    </section>
 
     <!-- Footer -->
     <footer>
