--- a/gallery2.html
+++ b/gallery2.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header>
-            <h3>natnael mekonnen / gallery</h3>
+            <h3>natnael mekonnen / gallery / style based on css using float</h3>
         </header>
 
         <section>
