--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <!-- Contact Info -->
     <section>
     <h3>Contact Us...</h3>
-    <div class="grid" style="text-align: justify;">
+    <div class="flexbox" style="text-align: justify;">
         <div>
     <form action="mailto: google@gmail.com" method="GET" enctype="utf-8">
         
