media queries added for navigation

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
     <!-- Contact Info -->
     <section>
     <h3>Contact Us...</h3>
+    <!-- Using flexbox here because it doesn't matter if map and form are on same line -->
     <div class="flexbox" style="text-align: justify;">
         <div>
     <form action="mailto: google@gmail.com" method="GET" enctype="utf-8">
