--- a/question2.html
+++ b/question2.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="grid">
+        <!-- Rows have bottom border(the first two rows) -->
+        <!-- Cols have right border(the first two columns) -->
         <div class="row col"></div>
         <div class="row col"></div>
         <div class="row"></div>
