--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="gallery.html">Gallery</a>
+        <a href="myworks.html">My Works</a>
         <a href="contact.html">Contact</a>
     </nav>
     
