blog.html updated; layout updated; myworks.html updated

--- a/myworks.html
+++ b/myworks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://nati-m-afw.github.io/MyCV/asset/img/icon/icon.gif">
     <link rel="stylesheet" href="asset/css/base_style.css">
+    <link rel="stylesheet" href="asset/css/gallery_myworks.css">
     <title>Natnael Mekonnen</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <a href="index.html">Home</a>
         <a href="gallery.html">Gallery</a>
         <a href="myworks.html">My Works</a>
+        <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
     
@@ -29,10 +31,38 @@
     </header>
 
     <!-- Body -->
-    <a href="question1.html" target="_blank">Q1</a>
-    <a href="question2.html" target="_blank">Q2</a>
-    <a href="question3.html" target="_blank">Q3</a>
-
+    <section>
+        <div class="unit">
+            <div class="image">
+                <a href="question1.html" target="_blank">
+                    <img src="asset/img/screenshot/scr1.gif" alt="Demo of CSS3" width="600" height="400">
+                </a>
+                <div class="desc">
+                    Q1 - Demo of the many selectors in CSS3
+                </div>
+            </div>
+        </div>
+        <div class="unit">
+            <div class="image">
+                <a href="question2.html" target="_blank">
+                    <img src="asset/img/screenshot/scr2.gif" alt="Tic Tac Toe" width="600" height="400">
+                </a>
+                <div class="desc">
+                    Q2 - Tic Tac Toe Board made using borders and centered with Margin
+                </div>
+            </div>
+        </div>
+        <div class="unit">
+            <div class="image">
+                <a href="question3.html" target="_blank">
+                    <img src="asset/img/screenshot/scr3.gif" alt="Flags" width="600" height="400">
+                </a>
+                <div class="desc">
+                    Q3 - Flags of diffrent countries recreated using the box model concept
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
