--- a/question3.html
+++ b/question3.html
@@ -17,12 +17,8 @@
     <!-- Latvia -->
     <div id="ukr"></div>
     <!-- Ukraine -->
-    <div id="gam"><div></div></div>
-    <!-- Gambia -->
     <div id="gab"></div>
     <!-- Gabon -->
-    <div id="jpn"></div>
-    <!-- Japan -->
     <div id="kuw"></div>
     <!-- Kuwait -->
     <div id="czk"></div>
@@ -31,6 +27,27 @@
     <!-- Botswana -->
     <div id="mau"><div></div></div>
     <!-- Mauritius    -->
-    <br><br><div>gdhsajdgsah</div><br><br>
+    <div id="gam"><div></div></div>
+    <!-- Gambia -->
+    <div id="jpn"></div>
+    <!-- Japan -->
+    <!-- <br><br><div>gdhsajdgsah</div><br><br> -->
+    <section>
+        <p>Names of the country flags(from left to right)</p>
+        <ol>
+            <li>Ethiopia</li>
+            <li>Spain</li>
+            <li>Poland</li>
+            <li>Latvia</li>
+            <li>Ukraine</li>
+            <li>Gabon</li>
+            <li>Kuwait</li>
+            <li>Czeck Republic</li>
+            <li>Botswana</li>
+            <li>Mauritius</li>
+            <li>Gambia</li>
+            <li>Japan</li>
+        </ol>
+    </section>
 </body>
 </html>
