--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="myworks.html">My Works</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
         
