favicon added on blog

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natnael Mekonnen / Blog</title>
     <link rel="stylesheet" href="asset/css/blog_style.css">
+    <link rel="icon" href="asset/img/icon/icon.gif">
 </head>
 <body>
 
